# devpixelforge

./: .gitignore  AGENTS.md  CHANGELOG.md  INTEGRATION.md  LICENSE  Makefile  README.md  integration-guide.md  mejoras.md  skills-lock.json
.github/workflows/: build.yml  release.yml
PRD/: 001-suite-multimedia.md
docs/: README.md  examples.md  logo-prompt.md  presentacion.md  schema.md
docs/examples/: adjust-colors-example.json  adjust-example.json  audio-example.json  crop-example.json  crop-focal-example.json  exif-auto-orient-example.json  exif-extract-example.json  exif-strip-example.json  markdown-to-pdf-file-example.json  markdown-to-pdf-inline-example.json  quality-example.json  rotate-example.json  rotate-flip-example.json  srcset-example.json  video-example.json  watermark-image-example.json  watermark-text-example.json
docs/testing/: 01-architecture.md  02-rust-tests.md  03-go-tests.md  04-running-and-ci.md  README.md  github-workflow-example.yml
docs/validation/markdown-to-pdf/: README.md
dpf/: Cargo.toml
dpf/examples/: gen_fixtures.rs
dpf/scripts/: download-test-fixtures.sh
dpf/src/: main.rs  pipeline.rs
dpf/src/operations/: adjust.rs  convert.rs  crop.rs  exif_ops.rs  favicon.rs  markdown_to_pdf.rs  mod.rs  optimize.rs  palette.rs  placeholder.rs  quality.rs  resize.rs  rotate.rs  sprite.rs  srcset.rs  utils.rs  watermark.rs
dpf/src/operations/audio/: mod.rs  normalize.rs  silence_trim.rs  transcode.rs  trim.rs
dpf/src/operations/video/: metadata.rs  mod.rs  profiles.rs  resize.rs  thumbnail.rs  transcode.rs  trim.rs
dpf/test_fixtures/: README.md  sample.md
dpf/tests/: integration_tests.rs  markdown_to_pdf_tests.rs
go-bridge/: INTEGRATION.md  audio_job.go  coverage.out  dpf.go  dpf_test.go  go.mod  imgproc.go  job.go  markdown_to_pdf_job.go  markdown_to_pdf_test.go  video_job.go
go-bridge/example/: main.go  markdown_to_pdf_examples.go
openspec/changes/rename-to-devpixelforge/: tasks.md  verify-report.md
openspec/changes/video-audio-processing/: tasks.md  verify-report.md
rust-imgproc/: Cargo.toml
rust-imgproc/src/: main.rs  pipeline.rs
rust-imgproc/src/operations/: batch.rs  convert.rs  favicon.rs  mod.rs  optimize.rs  placeholder.rs  resize.rs  sprite.rs  utils.rs
