[package]
name = "devforge-imgproc"
version = "0.1.0"
edition = "2021"
description = "High-performance image processing engine for DevForge MCP"
authors = ["Ing. Gustavo Gutiérrez"]

[[bin]]
name = "devforge-imgproc"
path = "src/main.rs"

[dependencies]
# Image processing core
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "ico", "bmp", "tiff"] }
webp = "0.3"
oxipng = { version = "9", features = ["parallel"] }
mozjpeg = "0.10"
resvg = "0.44"

# Favicon generation
ico = "0.3"

# CLI & I/O
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1.10"

# Error handling
anyhow = "1"
thiserror = "2"

# Base64 for inline output
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
